--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: #f9f9f9; /*h1 de color blanco*/
 }
 
 #app {
@@ -41,6 +42,7 @@ h1 {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  
 }
 
 .logo {
