--- a/style.css
+++ b/style.css
@@ -1,100 +1,153 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+#toolbar {
+  position: absolute;
+  overflow: hidden;
+  padding: 4px;
+  left: 15px;
+  top: 100px;
+  width: 24px;
+  bottom: 0px;
+  background-color: #F2F4F4;
+  border-radius: 5px;
+  height: 100px;}
+#container{
+  position: absolute;
+  overflow: hidden;
+  left: 45px;
+  top: 26px;
+  right: 0px;
+  bottom: 0px;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-  color: #f9f9f9; /*h1 de color blanco*/
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-  
-}
-
-.logo {
-  border: solid black 10px; /*agregue un borde negro de 10 px*/
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+#importButton {
+  position: absolute;
+  left: 800px;
+  top: 10px;
+  background-color: #00BFA6;
+  padding: 10px;
+  color: #fff;
+  letter-spacing: 2px;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  border-radius: 10px;
+  border: 2px dashed #00BFA6;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+#querieButton{
+  position: absolute;
+  left: 895px;
+  top: 10px;
+  background-color: #00BFA6;
+  padding: 10px;
+  color: #fff;
+  letter-spacing: 2px;
+  cursor: pointer;
+  border-radius: 10px;
+  border: 2px dashed #00BFA6;
+}
+
+#saveButton {
+  position: absolute;
+  left: 1000px;
+  top: 10px;
+  background-color: #9c2ba7;
+  padding: 10px;
+  color: #fff;
+  letter-spacing: 2px;
+  cursor: pointer;
+  border-radius: 10px;
+  border: 2px dashed #b500bf;
+}
+
+#btnAtras {
+  position: absolute;
+  overflow: hidden;
+  padding: 4px;
+  left: 15px;
+  top: 10px;
+  width: 35px;
+  bottom: 0px;
+  background-color: #F2F4F4;
+  border-radius: 5px;
+  border: 2px solid #F2F4F4;
+  cursor: pointer;
+  height: 35px;
+}
+
+#btnAtras i {
+  color: #17202A;
+  background-color: #F2F4F4;
+}
+
+#ContainerSUP {
+  font-family: Verdana;
+  position: absolute;
+  overflow: hidden;
+  padding: 5px 10px;
+  left: 55px;
+  top: 10px;
+  width: 300px;
+  bottom: 0px;
+  background-color: #F2F4F4;
+  border-radius: 5px;
+  height: 23px;
+}
+/*
+#buttons {
+  position: absolute;
+  border-radius: 0.5rem;
+  background-color: rgb(238, 238, 238);
+  padding: 0.25rem;
+  width: 55px;
+  left: 15px;
+  top: 50px;
+}*/
+.btn-toolbar{
+  position: absolute;
+  border-radius: 0.5rem;
+  background-color: rgb(238, 238, 238);
+  padding: 0.25rem;
+  left: 15px;
+  top: 50px;
+}
+/*
+.btn-toolbar{
+  position: absolute;
+  border-radius: 0.5rem;
+  background-color: rgb(238, 238, 238);
+  padding: 0.25rem;
+  left: 87px;
+  top: 50px;
+}*/
+#toolbar1{
+  position: absolute;
+  border-radius: 0.5rem;
+  background-color: rgb(238, 238, 238);
+  padding: 0.25rem;
+  left: 15px;
+  top: 50px;
+}
+
+#toolbar2{
+  position: absolute;
+  border-radius: 0.5rem;
+  background-color: rgb(238, 238, 238);
+  padding: 0.25rem;
+  left: 87px;
+  top: 50px;
+}
+
+#toolbar3{
+  position: absolute;
+  border-radius: 0.5rem;
+  background-color: rgb(238, 238, 238);
+  padding: 0.25rem;
+  left: 190px;
+  top: 50px;
+}
+
+#toolbar4{
+  position: absolute;
+  border-radius: 0.5rem;
+  background-color: rgb(238, 238, 238);
+  padding: 0.25rem;
+  left: 267px;
+  top: 50px;
 }
